# test_ruleset

./: example_config.yaml  pyproject.toml
.github/workflows/: config_update.yaml  main.yml
my_awesome_project/: __init__.py  main.py
tests/: test_main.py
workflows/: main.yml
